# glgc

./: CMakeLists.txt  README.md
etc/: lang.ini
lib/: exprtk.hpp
src/: expr.cpp  expr.hpp  file.cpp  file.hpp  main.cpp
